# Platform-Software

./: .gitignore  .gitmodules  README.md  encoder_data.csv  motor_rocking.py  requirements.txt
arm_control/: CMakeLists.txt  README.md  package.xml
arm_control/src/: grav_correction.cpp
arm_control/test/: README.md  test_communications.cpp
data-analysis/: control_logged_data.csv  data_analysis.asv  data_analysis.m  poke_break_logged_data.csv
icarus-arm-control/: CMakeLists.txt  README.md  package.xml
icarus-arm-control/.github/workflows/: main.yml
icarus-arm-control/ROS/ros1/test/: test_basic_unit_tests.cpp  test_communications.cpp
icarus-arm-control/ROS/ros2/: CMakeLists.txt  CMakeLists_store.txt  odrive_base  package.xml  package_save.xml  package_store.xml
icarus-arm-control/ROS/ros2/launch/: example_launch.yaml
icarus-arm-control/ROS/ros2/msg/: PublishData.msg
icarus-arm-control/ROS/ros2/src/: controller.cpp  controller_listener.cpp  gain_input.cpp  imu_logger.cpp  imu_pimu_integrator.cpp  imu_pimu_listener.cpp  imu_pimu_listener.hpp  imu_pimu_subscriber.cpp  inertial_sense_imu.cpp  ins_imu.cpp  logger.cpp  main.cpp  multi_node_runner.cpp  odrive_can_node.cpp  rishi_controller.cpp  test_publisher.cpp  test_subscriber.cpp  torque_logger.cpp
icarus-arm-control/ROS/ros2/test/: README.md  test_basic_unit_tests.cpp  test_communications.cpp  test_main.cpp  test_main.h
icarus-arm-control/ROS/shared/include/: ControlHelper.hpp  TopicHelper.h  controller.hpp  imu_pimu.hpp  imu_pimu_listener.hpp  inertial_sense_ros.h  odrive_can_node.hpp
icarus-arm-control/ROS/shared/src/: ControlHelper.cpp
icarus-arm-control/include/: ControlHelper.hpp  controller.hpp  imu_pimu.hpp
icarus-arm-control/launch/: example_launch.yaml
icarus-arm-control/msg/: IntegratedAngles.msg  PublishData.msg
icarus-arm-control/src/: controller.cpp  gain_input.cpp  imu_pimu_listener.cpp  integrator_listener.cpp  logger.cpp  main.cpp
inertial-sense-sdk/.github/workflows/: main.yml
inertial-sense-sdk/ROS/ros1/test/: test_basic_unit_tests.cpp  test_communications.cpp
inertial-sense-sdk/ROS/ros2/: CMakeLists.txt
inertial-sense-sdk/ROS/ros2/src/: inertial_sense_ros2.cpp
inertial-sense-sdk/ROS/ros2/test/: test_communications.cpp
inertialsense_imx5/inertialsense_imx5/lib/inertial-sense-sdk/ros/test/: test_basic_unit_tests.cpp  test_communications.cpp
inertialsense_imx5/inertialsense_imx5/lib/inertial-sense-sdk/src/: ISTcpClient.cpp  InertialSense.cpp
inertialsense_imx5/inertialsense_imx5/lib/inertial-sense-sdk/src/libusb/: Makefile  config.h  config.status  configure  libtool  libusb-1.0.pc
inertialsense_imx5/inertialsense_imx5/lib/inertial-sense-sdk/src/libusb/autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2
inertialsense_imx5/inertialsense_imx5/lib/inertial-sense-sdk/src/libusb/examples/: Makefile
inertialsense_imx5/inertialsense_imx5/lib/inertial-sense-sdk/src/libusb/libusb/: Makefile  Makefile.in
inertialsense_imx5/inertialsense_imx5/lib/inertial-sense-sdk/src/libusb/tests/: Makefile  Makefile.in
inertialsense_imx5/inertialsense_imx5/src/: inertialsense_imx5.cpp
motor_venv/: pyvenv.cfg
ros2_ws/inertialsense_imx5/inertialsense_imx5/src/: inertialsense_imx5.cpp
ros_odrive/odrive_node/launch/: example_launch.yaml
test-control/: CMakeLists.txt  README.md  package.xml
test-control/src/: grav_correction.cpp
test-scripts/: calibrate_demo.py  can_calibrate.py  can_closed_loop.py  can_json_config.py  can_simple.py  config.json  debug.py  motor_calibration  motor_calibration.py  motor_rocking.py  motor_test.py
test-scripts/output-csv-data/: encoder_data.csv
test_control/: CMakeLists.txt  package.xml
