<package format="3">
  <name>icarus_arm_control</name>
  <version>0.0.1</version>
  <description>
  This package reads IMU data and motor encoder data to perform inertial stabilization of a robotic armm.
  </description>
  <maintainer email="Winnifred.Regan@colorado.edu">CU Boulder Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ament_cmake</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <rosidl_package_name>${PROJECT_NAME}</rosidl_package_name>
    <rosidl_target_interfaces>msg/${PROJECT_NAME}.msg</rosidl_target_interfaces>
    <build_type>ament_cmake</build_type>
  </export>
</package>
